--- a/online_market/core/templates/core/base.html
+++ b/online_market/core/templates/core/base.html
@@ -40,6 +40,10 @@
 
         <ul class="space-y-2">
           <li>a href="#" class="text-lg text-teal-500 hover:text-teal-700">About</a></li>
+           <li>a href="{% url 'contact' %} " class="text-lg text-teal-500 hover:text-teal-700">Contact</li>
+           <li>a href="#" class="text-lg text-teal-500 hover:text-teal-700">Privacy policy</li>
+           <li>a href="#" class="text-lg text-teal-500 hover:text-teal-700">Term of use</li>
+
         </ul>
       </div>
       
